--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <ul>
                                 <li><i class="icon ion-ios-checkmark icon-small"></i>IP: 999.999.999.999</li>
                                 <li><i class="icon ion-ios-checkmark icon-small"></i>Port: 99999</li>
-                                <li><i class="icon ion-ios-checkmark icon-small"></i>XX Player</li>
+                                <li><i class="icon ion-ios-checkmark icon-small"></i>XX Players</li>
                                 <li><a href="#" class="myButton">Mod List</a> / <button class="myButton open-modal" data="resources/data/ark">Rules</button></li>
                             </ul>
                         </div>
